Añado dependencias a package.json
Incluyo la dependencias de typescript, que incluye ya tsc

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "CompraOnline",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "typescript": "5.2.2"
+    },
     "scripts": {
         "check": "tsc --noEmit src/compra.ts",
         "build": "tsc"
