--- a/iv.yaml
+++ b/iv.yaml
@@ -1,5 +1,5 @@
 lenguaje: TypeScript
-entidad: src/compra.ts
+entidad: src/ticket_electronico.ts
 automatizar:
   fichero: package.json
   orden: pnpm run
