--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
     "name": "CompraOnline",
     "version": "0.0.1",
-    "dependencies": {
-        "typescript": "5.2.2"
-    },
     "devDependencies": {
-        "vitest":"^0.34.6"
+        "@types/node": "^20.10.0",
+        "vitest": "^0.34.6",
+        "typescript": "5.2.2"
     },
     "scripts": {
         "check": "tsc --noEmit src/ticket_electronico.ts",
         "build": "tsc",
-        "test":"vitest",
+        "test": "vitest",
         "start": "node dist/ticket_electronico.ts"
     }
 }
