--- a/iv.yaml
+++ b/iv.yaml
@@ -3,4 +3,4 @@ entidad: src/ticket_electronico.ts
 automatizar:
   fichero: package.json
   orden: pnpm run
-test: test/test_extraccion.test.ts
+test: test/extraccion_info.ts
