--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "CompraOnline",
     "version": "0.0.1",
     "devDependencies": {
-        "@types/node": "^20.10.0",
-        "@types/chai": "^4.3.10",
-        "@types/mocha": "^10.0.4",
-        "chai": "^4.3.10",
-        "mocha": "^10.2.0",
+        "@types/node": "20.8.0",
+        "@types/chai": "4.3.10",
+        "@types/mocha": "10.0.4",
+        "chai": "4.3.10",
+        "mocha": "10.2.0",
         "typescript": "5.2.2",
-        "ts-node": "^10.9.1"
+        "ts-node": "10.9.1"
     },
     "scripts": {
         "check": "tsc --noEmit src/ticket_electronico.ts",
