--- a/.github/workflows/node_CI.yml
+++ b/.github/workflows/node_CI.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install pnpm
-        run: npm install -g pnpm:latest
+        run: npm install -g pnpm@latest
 
       - name: Install dependencies
         run: pnpm install ci
