Testeo en cada CI diferentes versiones
Con appveyor testeo la version estable y con GitHub Actions la version lts y al lanzar el docker se usa la dev

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [lts/-1, lts/*]
+        node-version: [lts/-1]
 
     steps:
       - name: Checkout
