--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,8 @@
+image:
+  name: luciaansino/compraonline:latest
+
 environment:
   nodejs_version: "20"
-
-install:
-  - ps: Install-Product node $env:nodejs_version
-  - npm install
-  - npm install -g pnpm@latest
 
 
 test_script:
