--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,16 @@
-image:
-  name: luciaansino/compraonline:latest
-
 environment:
   nodejs_version: "20"
+
+install:
+  - ps: Install-Product node $env:nodejs_version
+  - npm install
+  - npm install -g pnpm@latest
 
 
 test_script:
   - node --version
   - pnpm --version
-  
+
   - pnpm run test
 
 build: off
