--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,5 +7,5 @@ install:
 test_script:
   - node --version
   - docker run -tv %APPVEYOR_BUILD_FOLDER%:/app/test luciaansino/compraonline:latest
-
+  - pause
 build: off
