Arreglo error de appveyor
Modificación de la configuración de appveyor para arreglar errores

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,6 @@ before_build:
 
 test_script:
   - node --version
-  - docker run -tv `pwd`:/app/test luciaansino/compraonline:latest
+  - docker run -tv $(pwd):/app/test luciaansino/compraonline:latest
 
 build: off
