--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,14 +3,12 @@ environment:
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install
-  - npm install -g pnpm@latest
 
 before_build:
   - docker build -t luciaansino/compraonline:latest .
 
 test_script:
   - node --version
-  - docker run -tv $(pwd):/app/test luciaansino/compraonline:latest
+  - docker run -tv /app/test luciaansino/compraonline:latest
 
 build: off
